Docs/language.bnf
# Linguagem

prog        ::= funcs

funcs       ::= func funcs
              | NULL
func        ::= type id(params) { stmts }

params      ::= param tail
              | NULL
tail        ::= , param tail
              | NULL
param       ::= type id

stmts       ::= decl stmts
	          | stmt stmts
              | NULL

decl        ::= type id index assign;
index       ::= [ integer ]
              | NULL
assign      ::= = bool
	          | NULL

stmt        ::= basic;
              | return bool;
              | block

block       ::= { stmts }
              | if (bool) stmt
              | while (bool) stmt
              | do stmt while (bool);
              | for (stmts bool; basic) stmt

basic       ::= plusplus local plusplus
              | local assig bool

plusplus    ::= ++
              | --
              | NULL

assig       ::= oper =
oper        ::= +
              | -
              | *
              | /
              | &
              | |
              | NULL

local       ::= id position
position    ::= [bool]
              | NULL

bool        ::= join lor
lor         ::= || join lor
              | NULL

join        ::= equality land
land        ::= && equality land
              | NULL

equality    ::= rel eqdif
eqdif       ::= == rel eqdif
              | != rel eqdif
              | NULL

rel         ::= ari comp
comp        ::= < ari comp
              | <= ari comp
              | > ari comp
              | >= ari comp
              | NULL

ari         ::= term oper
oper        ::= + term oper
              | - term oper
              | NULL

term        ::= unary calc
calc        ::= * unary calc
              | / unary calc
              | NULL

unary       ::= !unary
              | -unary
              | factor

factor      ::= (bool)
              | call
              | local
              | integer
              | real
              | true
              | false

call        ::= id(args)
args        ::= bool tailAr
              | NULL
tailAr      ::= , bool tailAr
              | NULL
